--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
     <div id="mario-chat">
         <div id="chat-window">
             <div id="output"></div>
-        </div>
+            <div id="feedback"></div>
+    </div>
     </div>
     <input id="name" type="text" placeholder="Name"/>
     <input id="message" type="text" placeholder="Message"/>
